5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3987/executions/1573_1329.log
== SUBMITION (2019-03-11 15:09:25) 
-- CODE:
pint(180/4)
-- EXECUTION TIME:
0.158744
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1329/main.py", line 1, in <module>
    pint(180/4)
NameError: name 'pint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:09:46) 
-- CODE:
print(180/4)
-- EXECUTION TIME:
0.116294
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
